--- a/app/src/main/res/drawable/round_corner.xml
+++ b/app/src/main/res/drawable/round_corner.xml
@@ -10,9 +10,9 @@
 <!--</selector>-->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape android:shape="oval">
+        <shape android:shape="rectangle">
             <solid android:color="#ED0202" />
-            <corners android:radius="100dp" />
+            <corners android:radius="400dp" />
         </shape>
     </item>
 
