--- a/app/src/main/res/layout/cart_icon.xml
+++ b/app/src/main/res/layout/cart_icon.xml
@@ -5,7 +5,6 @@
 
     android:id="@+id/cart_toolbar"
     android:layout_width="wrap_content"
-    android:padding="5dp"
     android:layout_height="wrap_content"
     android:layout_margin="5dp">
 
@@ -13,7 +12,9 @@
         android:id="@+id/cart_icon_toolbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:src="@drawable/ic_baseline_shopping_cart_24"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,13 +23,17 @@
         android:id="@+id/cart_icon_counter_toolbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="2dp"
         android:background="@drawable/round_corner"
+        android:paddingStart="2dp"
+        android:paddingEnd="2dp"
+        android:text="2"
         android:textColor="@color/white"
         android:textSize="8sp"
-        android:text="2"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="10" />
+        tools:text="8" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
