Changes in Progress

--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -20,12 +21,11 @@
         android:id="@+id/cartRelativeLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cartRecyclerView"
         android:background="#EDEBF6"
         android:elevation="10dp"
-        >
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cartRecyclerView">
 
         <TextView
             android:id="@+id/cartTotal"
@@ -33,22 +33,31 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:padding="10dp"
-            android:text="Total:-"
             android:textSize="25sp"
             android:textStyle="bold"
-            tools:text="Total:- " />
+            tools:text="@string/total" />
 
         <TextView
             android:id="@+id/cartTotalValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
             android:layout_margin="20dp"
+            android:layout_toEndOf="@+id/cartTotal"
+            android:layout_toRightOf="@+id/cartTotal"
             android:padding="10dp"
             android:textSize="25sp"
             android:textStyle="bold"
             tools:text="100$" />
+
+        <Button
+            android:id="@+id/payNowButtonCart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_margin="20dp"
+            android:layout_marginRight="-2dp"
+            android:text="@string/pay_now" />
 
 
     </RelativeLayout>
