--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -33,6 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:padding="10dp"
+            android:text="@string/total"
             android:textSize="25sp"
             android:textStyle="bold"
             tools:text="@string/total" />
@@ -58,8 +58,6 @@
             android:layout_margin="20dp"
             android:layout_marginRight="-2dp"
             android:text="@string/pay_now" />
-
-
     </RelativeLayout>
 
 
