--- a/app/src/main/res/layout/activity_past_orders.xml
+++ b/app/src/main/res/layout/activity_past_orders.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="No Past Orders"
+        android:textSize="20dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,6 +25,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-
         tools:listitem="@layout/item_view_past_orders" />
 </androidx.constraintlayout.widget.ConstraintLayout>
