--- a/app/src/main/res/layout/custom_action_bar_layout.xml
+++ b/app/src/main/res/layout/custom_action_bar_layout.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        android:foreground="?android:attr/selectableItemBackground"
         android:padding="5dp"
         android:src="@drawable/ic_baseline_arrow_back_24"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -18,24 +19,23 @@
 
     <TextView
         android:id="@+id/activity_name_custom_action_bar"
+        style="@style/TextAppearance.AppCompat.Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:padding="5dp"
-        style="@style/TextAppearance.AppCompat.Title"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/back_arrow_custom_action_bar"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-
         tools:text="Walmart" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cart_custom_action_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:foreground="?android:attr/selectableItemBackground"
         app:layout_constraintBottom_toBottomOf="parent"
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -60,13 +60,11 @@
             android:background="@drawable/round_corner"
             android:paddingStart="2dp"
             android:paddingEnd="2dp"
-            android:text="2"
             android:textColor="@color/white"
-            android:textSize="8sp"
+            android:textSize="10sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="8" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
@@ -74,10 +72,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        android:foreground="?android:attr/selectableItemBackground"
         android:padding="5dp"
         android:src="@drawable/ic_baseline_shopping_bag_24"
         app:layout_constraintBottom_toBottomOf="parent"
-
         app:layout_constraintEnd_toStartOf="@id/cart_custom_action_bar"
         app:layout_constraintTop_toTopOf="parent" />
 
