--- a/app/src/main/res/layout/activity_item_detail.xml
+++ b/app/src/main/res/layout/activity_item_detail.xml
@@ -62,6 +62,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:padding="5dp"
+        android:textStyle="bold"
+        app:layout_constrainedWidth="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/productPrice"
@@ -74,10 +76,12 @@
         android:layout_margin="20dp"
         android:scrollbarAlwaysDrawVerticalTrack="true"
         android:scrollbars="vertical"
+        app:layout_constrainedHeight="true"
         app:layout_constraintBottom_toTopOf="@+id/addToCart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/productName"
+        app:layout_constraintVertical_bias="0"
         tools:text="Product Description" />
 
     <Button
