--- a/app/src/main/res/layout/custom_action_bar_layout.xml
+++ b/app/src/main/res/layout/custom_action_bar_layout.xml
@@ -9,7 +9,7 @@
         android:id="@+id/back_arrow_custom_action_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_margin="8dp"
         android:foreground="?android:attr/selectableItemBackground"
         android:padding="5dp"
         android:src="@drawable/ic_baseline_arrow_back_24"
@@ -25,7 +25,11 @@
         android:layout_margin="5dp"
         android:padding="5dp"
         android:textStyle="bold"
+        android:gravity="start"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/past_order_custom_action_bar"
         app:layout_constraintStart_toEndOf="@id/back_arrow_custom_action_bar"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Walmart" />
